--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -38,3 +38,10 @@
       archivePrefix={arXiv},
       primaryClass={math.NA}
 }
+
+@article{chen2020exploration,
+  title={On the Exploration of Incremental Learning for Fine-grained Image Retrieval},
+  author={Chen, Wei and Liu, Yu and Wang, Weiping and Tuytelaars, Tinne and Bakker, Erwin M and Lew, Michael},
+  journal={BMVC},
+  year={2020}
+}
