--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -43,5 +43,6 @@
   title={On the Exploration of Incremental Learning for Fine-grained Image Retrieval},
   author={Chen, Wei and Liu, Yu and Wang, Weiping and Tuytelaars, Tinne and Bakker, Erwin M and Lew, Michael},
   journal={BMVC},
+  url = {https://britishmachinevisionassociation.github.io/bmvc},
   year={2020}
 }
