--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -55,3 +55,15 @@
   pdf_url = {https://dl.acm.org/doi/pdf/10.1145/3394171.3413673},
   project_url = {https://github.com/TPCD/DG-VAE},
 }
+
+@inproceedings{pu2021lifelong,
+ author = {Nan Pu, Wei Chen, Yu Liu, Erwin M. Bakker and Michael S. Lew},
+ title = {Lifelong Person Re-Identification via Adaptive Knowledge Accumulation},
+ eprint = {2103.12462},
+ eprinttype = {arXiv},
+ eprintclass = {cs.CV},
+ booktitle = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+ year = {2021},
+ pdf_url = {https://arxiv.org/pdf/2103.12462.pdf},
+  project_url= {https://github.com/TPCD/LifelongReID}
+}
