--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -57,8 +57,8 @@
 }
 
 @inproceedings{pu2021lifelong,
- author = {Nan Pu, Wei Chen, Yu Liu, Erwin M. Bakker and Michael S. Lew},
- title = {Lifelong Person Re-Identification via Adaptive Knowledge Accumulation},
+  title = {Lifelong Person Re-Identification via Adaptive Knowledge Accumulation},
+ author = {Pu, Nan and Chen, Wei and Liu, Yu and Bakker, Erwin M and Lew, Michael S},
  eprint = {2103.12462},
  eprinttype = {arXiv},
  eprintclass = {cs.CV},
