--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -48,8 +48,8 @@
 
 @inproceedings{pu2020dual,
   title={Dual Gaussian-based Variational Subspace Disentanglement for Visible-Infrared Person Re-Identification},
-  author={Pu, Nan and Chen, Wei and Liu, Yu and Bakker, Erwin M and Lew, Michael S},
-  booktitle={Proceedings of the 28th ACM International Conference on Multimedia},
+  author={Nan Pu and Wei Chen and Yu Liu and Erwin M. Bakker and Michael S. Lew},
+  booktitle={ACM MM},
   pages={2149--2158},
   year={2020},
   pdf_url = {https://dl.acm.org/doi/pdf/10.1145/3394171.3413673},
@@ -58,11 +58,8 @@
 
 @inproceedings{pu2021lifelong,
   title = {Lifelong Person Re-Identification via Adaptive Knowledge Accumulation},
- author = {Pu, Nan and Chen, Wei and Liu, Yu and Bakker, Erwin M and Lew, Michael S},
- eprint = {2103.12462},
- eprinttype = {arXiv},
- eprintclass = {cs.CV},
- booktitle = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+ author = {Nan Pu and Wei Chen and Yu Liu and Erwin M. Bakker and Michael S. Lew},
+ booktitle = {CVPR},
  year = {2021},
  pdf_url = {https://arxiv.org/pdf/2103.12462.pdf},
   project_url= {https://github.com/TPCD/LifelongReID}
