--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -39,13 +39,6 @@
       primaryClass={math.NA}
 }
 
-@article{chen2020exploration,
-  title={On the Exploration of Incremental Learning for Fine-grained Image Retrieval},
-  author={Chen, Wei and Liu, Yu and Wang, Weiping and Tuytelaars, Tinne and Bakker, Erwin M and Lew, Michael},
-  journal={BMVC},
-  year={2020}
-}
-
 @inproceedings{pu2020dual,
   title={Dual Gaussian-based Variational Subspace Disentanglement for Visible-Infrared Person Re-Identification},
   author={Nan Pu and Wei Chen and Yu Liu and Erwin M. Bakker and Michael S. Lew},
@@ -64,3 +57,12 @@
  pdf_url = {https://arxiv.org/pdf/2103.12462.pdf},
   project_url= {https://github.com/TPCD/LifelongReID}
 }
+
+@article{chen2020exploration,
+  title={On the Exploration of Incremental Learning for Fine-grained Image Retrieval},
+  author={Chen, Wei and Liu, Yu and Wang, Weiping and Tuytelaars, Tinne and Bakker, Erwin M and Lew, Michael},
+  journal={BMVC},
+  year={2020},
+  pdf_url = {https://arxiv.org/pdf/2010.08020.pdf}
+}
+
