--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -58,10 +58,10 @@
   project_url= {https://github.com/TPCD/LifelongReID}
 }
 
-@article{chen2020exploration,
+@inproceedings{chen2020exploration,
   title={On the Exploration of Incremental Learning for Fine-grained Image Retrieval},
   author={Chen, Wei and Liu, Yu and Wang, Weiping and Tuytelaars, Tinne and Bakker, Erwin M and Lew, Michael},
-  journal={BMVC},
+  booktitle={BMVC},
   year={2020},
   pdf_url = {https://arxiv.org/pdf/2010.08020.pdf}
 }
