--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -63,6 +63,6 @@
   author={Chen, Wei and Liu, Yu and Wang, Weiping and Tuytelaars, Tinne and Bakker, Erwin M and Lew, Michael},
   booktitle={BMVC},
   year={2020},
-  pdf_url = {https://arxiv.org/pdf/2010.08020.pdf}
+  pdf_url = {https://arxiv.org/pdf/2010.08020.pdf},
 }
 
