--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -58,6 +58,17 @@
   project_url= {https://github.com/TPCD/LifelongReID}
 }
 
+
+@inproceedings{pu2021lifelong,
+  title = {Lifelong Person Re-Identification via Adaptive Knowledge Accumulation},
+ author = {Nan Pu and Wei Chen and Yu Liu and Erwin M. Bakker and Michael S. Lew},
+ booktitle = {CVPR},
+ year = {2021},
+ pdf_url = {https://arxiv.org/pdf/2103.12462.pdf},
+  project_url= {https://github.com/TPCD/LifelongReID}
+}
+
+
 @inproceedings{chen2020exploration,
   title={On the Exploration of Incremental Learning for Fine-grained Image Retrieval},
   author={Chen, Wei and Liu, Yu and Wang, Weiping and Tuytelaars, Tinne and Bakker, Erwin M and Lew, Michael},
