--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -66,3 +66,17 @@
   pdf_url = {https://arxiv.org/pdf/2010.08020.pdf},
 }
 
+@article{chen2020new,
+  title={New Ideas and Trends in Deep Multimodal Content Understanding: A Review},
+  author={Chen, Wei and Wang, Weiping and Liu, Li and Lew, Michael S},
+  journal={Neurocomputing},
+  year={2020},
+  volume = {426},
+  pages = {195-215},
+  publisher={Elsevier}
+}
+
+
+
+
+
