--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -73,10 +73,27 @@
   year={2020},
   volume = {426},
   pages = {195-215},
+  pdf_url = {https://reader.elsevier.com/reader/sd/pii/S0925231220315939?token=A59EEF0A490EA82B76487203DAEC7BE640047F9BF1620DF9AB28845DCF0D1B48258BF0D63DBB4A2C6E3A61ED702E987B&originRegion=eu-west-1&originCreation=20210413191803},
+  publisher={Elsevier}
+}
+
+@article{chen2021integrating,
+  title={Integrating Information Theory and Adversarial Learning for Cross-modal Retrieval},
+  author={Chen, Wei and Liu, Yu and Bakker, Erwin M and Lew, Michael S},
+  journal={Pattern Recognition},
+  pages={107983},
+  year={2021},
+  pdf_url = {https://www.sciencedirect.com/science/article/pii/S0031320321001709},
   publisher={Elsevier}
 }
 
 
-
+@article{chen2021feature,
+  title={Integrating Information Theory and Adversarial Learning for Cross-modal Retrieval},
+  author={Chen, Wei and Liu, Yu and Pu, Nan and Wang, Weiping and Liu, Li and Lew, Michael S},
+  journal={IEEE Transactions on Multimedia},
+  year={2021},
+  publisher={IEEE}
+}
 
 
