--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -93,7 +93,14 @@
   author={Chen, Wei and Liu, Yu and Pu, Nan and Wang, Weiping and Liu, Li and Lew, Michael S},
   journal={IEEE Transactions on Multimedia},
   year={2021},
+  project_url= {https://github.com/cw1091293482/Deep-Incremental-Image-Retrieval},
   publisher={IEEE}
 }
 
+@article{chen2021deep,
+  title={Deep Image Retrieval: A Survey},
+  author={Chen, Wei and Liu, Yu and Wang, Weiping and Bakker, Erwin and Georgiou, Theodoros and Fieguth, Paul and Liu, Li and Lew, Michael S},
+  journal={Submitted to T-PAMI},
+  year={2021}
+}
 
