--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -101,6 +101,18 @@
   title={Deep Image Retrieval: A Survey},
   author={Chen, Wei and Liu, Yu and Wang, Weiping and Bakker, Erwin and Georgiou, Theodoros and Fieguth, Paul and Liu, Li and Lew, Michael S},
   journal={Submitted to T-PAMI},
+  pdf_url = {https://arxiv.org/pdf/2101.11282.pdf},
   year={2021}
+}
+
+@article{lao2021multi,
+  title={Multi-stage hybrid embedding fusion network for visual question answering},
+  author={Lao, Mingrui and Guo, Yanming and Pu, Nan and Chen, Wei and Liu, Yu and Lew, Michael S},
+  journal={Neurocomputing},
+  volume={423},
+  pages={541--550},
+  year={2021},
+  pdf_url = {https://reader.elsevier.com/reader/sd/pii/S0925231220316593?token=E9FD4F0F20FF61426265DEE5F4D5E4AEC52A2C92525552D33F420442A3931AF0A827CD9DA0710D7F6654A2C6386289EA&originRegion=eu-west-1&originCreation=20210413193309},
+  publisher={Elsevier}
 }
 
