--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -100,7 +100,7 @@
 @article{chen2021deep,
   title={Deep Image Retrieval: A Survey},
   author={Chen, Wei and Liu, Yu and Wang, Weiping and Bakker, Erwin and Georgiou, Theodoros and Fieguth, Paul and Liu, Li and Lew, Michael S},
-  journal={Submitted to IEEE Transactions on PAMI},
+  journal={arXiv preprint arXiv:2101.11282},
   pdf_url = {https://arxiv.org/pdf/2101.11282.pdf},
   year={2021}
 }
