Add some links to bibtex

--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -5,7 +5,8 @@
   volume={9},
   pages={e64384},
   year={2020},
-  publisher={eLife Sciences Publications Limited}
+  publisher={eLife Sciences Publications Limited},
+  doi={10.7554/eLife.64384}
 }
 
 @article{lagerwerf2020computationally,
@@ -16,7 +17,8 @@
   number={12},
   pages={135},
   year={2020},
-  publisher={Multidisciplinary Digital Publishing Institute}
+  publisher={Multidisciplinary Digital Publishing Institute},
+  doi={10.3390/jimaging6120135}
 }
 
 @article{zeegers2020task,
@@ -27,7 +29,8 @@
   number={12},
   pages={132},
   year={2020},
-  publisher={Multidisciplinary Digital Publishing Institute}
+  publisher={Multidisciplinary Digital Publishing Institute},
+  doi={10.3390/jimaging6120132}
 }
 
 @misc{ganguly2021improving,
@@ -36,7 +39,8 @@
       year={2021},
       eprint={2103.08288},
       archivePrefix={arXiv},
-      primaryClass={math.NA}
+      primaryClass={math.NA},
+      url={https://arxiv.org/abs/2103.08288}
 }
 
 @inproceedings{pu2020dual,
