--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -1,3 +1,29 @@
+@Article{Hendriksen2021,
+author={Hendriksen, Allard A.
+and B{\"u}hrer, Minna
+and Leone, Laura
+and Merlini, Marco
+and Vigano, Nicola
+and Pelt, Dani{\"e}l M.
+and Marone, Federica
+and di Michiel, Marco
+and Batenburg, K. Joost},
+title={Deep denoising for multi-dimensional synchrotron X-ray tomography without high-quality reference data},
+journal={Scientific Reports},
+year={2021},
+month={Jun},
+day={04},
+volume={11},
+number={1},
+pages={11895},
+abstract={Synchrotron X-ray tomography enables the examination of the internal structure of materials at submicron spatial resolution and subsecond temporal resolution. Unavoidable experimental constraints can impose dose and time limits on the measurements, introducing noise in the reconstructed images. Convolutional neural networks (CNNs) have emerged as a powerful tool to remove noise from reconstructed images. However, their training typically requires collecting a dataset of paired noisy and high-quality measurements, which is a major obstacle to their use in practice. To circumvent this problem, methods for CNN-based denoising have recently been proposed that require no separate training data beyond the already available noisy reconstructions. Among these, the Noise2Inverse method is specifically designed for tomography and related inverse problems. To date, applications of Noise2Inverse have only taken into account 2D spatial information. In this paper, we expand the application of Noise2Inverse in space, time, and spectrum-like domains. This development enhances applications to static and dynamic micro-tomography as well as X-ray diffraction tomography. Results on real-world datasets establish that Noise2Inverse is capable of accurate denoising and enables a substantial reduction in acquisition time while maintaining image quality.},
+issn={2045-2322},
+doi={10.1038/s41598-021-91084-8},
+url={https://doi.org/10.1038/s41598-021-91084-8}
+}
+
+
+
 @article{pelt2020deep,
   title={Deep Learning: Tackling the challenges of bioimage analysis},
   author={Pelt, Dani{\"e}l M},
