--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -1,3 +1,13 @@
+@article{Skorikov2021,
+  doi = {10.1039/d1nr03232a},
+  url = {https://doi.org/10.1039/d1nr03232a},
+  year = {2021},
+  publisher = {Royal Society of Chemistry ({RSC})},
+  author = {Alexander Skorikov and Wouter Heyvaert and Wiebke Albecht and Daniël M. Pelt and Sara Bals},
+  title = {Deep learning-based denoising for improved dose efficiency in {EDX} tomography of nanoparticles},
+  journal = {Nanoscale}
+}
+
 @Article{Hendriksen2021,
 author={Hendriksen, Allard A.
 and B{\"u}hrer, Minna
