--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -1,3 +1,18 @@
+@inproceedings{,
+author = {Oriol Roche i Morgo and Lorenzo Massimi and Tamara Suaris and Marco Endrizzi and Peter R. T. Munro and Savvas Savvidis and Glafkos Havariyoun and P. M. Sam Hawker and Alberto Astolfo and Oliver J. Larkin and Rachel L. Nelan and J. Louise Jones and Daniël M. Pelt and David Bate and Alessandro Olivo and Charlotte K. Hagen},
+title = {{Exploring the potential of cycloidal computed tomography for advancing intraoperative specimen imaging}},
+volume = {11840},
+booktitle = {Developments in X-Ray Tomography XIII},
+editor = {Bert Müller and Ge Wang},
+organization = {International Society for Optics and Photonics},
+publisher = {SPIE},
+pages = {106 -- 115},
+keywords = {cycloidal computed tomography, intraoperative specimen imaging, micro computed tomography, x-ray imaging, spatial resolution, structured illumination, phase contrast, edge illumination},
+year = {2021},
+doi = {},
+URL = {https://doi.org/10.1117/12.2594547}
+}
+
 @article{Skorikov2021,
   doi = {10.1039/d1nr03232a},
   url = {https://doi.org/10.1039/d1nr03232a},
