--- a/assets/publications/publications.bib
+++ b/assets/publications/publications.bib
@@ -1,3 +1,18 @@
+@article{Ganguly:mo5240,
+author = "Ganguly, Poulami Somanya and Pelt, Dani{\"{e}}l M. and G{\"{u}}rsoy, Doga and de Carlo, Francesco and Batenburg, K. Joost",
+title = "{Improving reproducibility in synchrotron tomography using implementation-adapted filters}",
+journal = "Journal of Synchrotron Radiation",
+year = "2021",
+volume = "28",
+number = "5",
+pages = "1583--1597",
+month = "Sep",
+doi = {10.1107/S1600577521007153},
+url = {https://doi.org/10.1107/S1600577521007153},
+abstract = {For reconstructing large tomographic datasets fast, filtered backprojection-type or Fourier-based algorithms are still the method of choice, as they have been for decades. These robust and computationally efficient algorithms have been integrated in a broad range of software packages. The continuous mathematical formulas used for image reconstruction in such algorithms are unambiguous. However, variations in discretization and interpolation result in quantitative differences between reconstructed images, and corresponding segmentations, obtained from different software. This hinders reproducibility of experimental results, making it difficult to ensure that results and conclusions from experiments can be reproduced at different facilities or using different software. In this paper, a way to reduce such differences by optimizing the filter used in analytical algorithms is proposed. These filters can be computed using a wrapper routine around a black-box implementation of a reconstruction algorithm, and lead to quantitatively similar reconstructions. Use cases for this approach are demonstrated by computing implementation-adapted filters for several open-source implementations and applying them to simulated phantoms and real-world data acquired at the synchrotron. Our contribution to a reproducible reconstruction step forms a building block towards a fully reproducible synchrotron tomography data processing pipeline.},
+keywords = {tomographic reconstruction, filtered backprojection, gridrec, filter optimization, synchrotron tomography},
+}
+
 @inproceedings{,
 author = {Oriol Roche i Morgo and Lorenzo Massimi and Tamara Suaris and Marco Endrizzi and Peter R. T. Munro and Savvas Savvidis and Glafkos Havariyoun and P. M. Sam Hawker and Alberto Astolfo and Oliver J. Larkin and Rachel L. Nelan and J. Louise Jones and Daniël M. Pelt and David Bate and Alessandro Olivo and Charlotte K. Hagen},
 title = {{Exploring the potential of cycloidal computed tomography for advancing intraoperative specimen imaging}},
@@ -82,16 +97,6 @@ url={https://doi.org/10.1038/s41598-021-91084-8}
   year={2020},
   publisher={Multidisciplinary Digital Publishing Institute},
   doi={10.3390/jimaging6120132}
-}
-
-@misc{ganguly2021improving,
-      title={Improving reproducibility in synchrotron tomography using implementation-adapted filters}, 
-      author={Poulami Somanya Ganguly and Daniël M. Pelt and Doga Gürsoy and Francesco de Carlo and K. Joost Batenburg},
-      year={2021},
-      eprint={2103.08288},
-      archivePrefix={arXiv},
-      primaryClass={math.NA},
-      url={https://arxiv.org/abs/2103.08288}
 }
 
 @inproceedings{pu2020dual,
